[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typedargs"
description = "commandline parser for typed objects"
readme = "README.md"
authors = [{name="Atsushi Odagiri", email="aodagx@gmail.com"}]
urls = {"homepage" = "https://github.com/aodag/typedargs"}
license = {text = "MIT"}
version = "0.1"