[build-system]
# requires = ["setuptools", "wheel"]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "typedargs"
description = "commandline parser for typed objects"
readme = "README.md"
authors = [{name="Atsushi Odagiri", email="aodagx@gmail.com"}]
urls = {homepage = "https://github.com/aodag/typedargs"}
license = {text = "MIT"}

dynamic = ["version"]

[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "pytest-mock"]
dev = ["mypy", "black"]